--- a/experiments/multi-offloading/exp_shakespeare_non_iid_multi_off/descr.yaml
+++ b/experiments/multi-offloading/exp_shakespeare_non_iid_multi_off/descr.yaml
@@ -18,7 +18,7 @@ unique_pairs: false
 #  slow: [1, 1]
 #  medium: [2, 2]
 #  fast: [3, 3]
-data_sampler: "n labels" # "limit labels" || "q sampler" || "dirichlet" || "uniform" (default)
+data_sampler: "uniform" # "limit labels" || "q sampler" || "dirichlet" || "uniform" (default)
 data_sampler_args:
   - 4     # label limit || q probability || alpha || unused
   - 42    # random seed || random seed || random seed || unused
