--- a/experiments/multi-offloading/fairness/exp_mnist_fairness_025/descr.yaml
+++ b/experiments/multi-offloading/fairness/exp_mnist_fairness_025/descr.yaml
@@ -4,8 +4,8 @@ epochs: 2
 rounds: 100
 epochs_per_cycle: 1
 wait_for_clients: true
-net: MNISTCNN
-dataset: mnist
+net: FashionMNISTCNN
+dataset: fashion-mnist
 # Use cuda is available; setting to false will force CPU
 cuda: false
 profiling_time: 100
@@ -20,7 +20,7 @@ unique_pairs: false
 #  fast: [3, 3]
 data_sampler: "n labels" # "limit labels" || "q sampler" || "dirichlet" || "uniform" (default)
 data_sampler_args:
-  - 2     # label limit || q probability || alpha || unused
+  - 4     # label limit || q probability || alpha || unused
   - 42    # random seed || random seed || random seed || unused
 num_clients: 23
 replications: 1
